# ascot-gateway

./: Cargo.toml  README.md  Rocket.toml
src/: controller.rs  controls.rs  database.rs  device.rs  error.rs  form.rs  inputs.rs  main.rs  test.rs
src/database/: controls.rs  device.rs  mod.rs  query.rs
templates/: device.html.hbs  error.html.hbs  fridge.html.hbs  index.html.hbs  light.html.hbs  modal-device.html.hbs  modal-fridge.html.hbs  modal-hazards.html.hbs  modal-light.html.hbs
