[package]
name = "ascot-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Protocol service to discover a device in the network
mdns-sd = "0.10.4"

# Send an HTTP REST API
reqwest = { version = "0.12", features = ["json"] }

# Web app
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }

# Database
rocket_db_pools = { version = "0.1.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7.0", default-features = false, features = ["macros", "migrate"] }

# Serialize and deserialize methods
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Asynchronous logger
tracing = "0.1"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

# Openssl (needed to cross-compile the gateway for ARM)
[target.'cfg(target_arch = "arm")'.dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
